# STL_PointCloud_Viewer

./: CMakeLists.txt  README.md
Documentation/: programOutline.aux  programOutline.tex
includes/camera/: camera.h
includes/cameraOrtho/: cameraOrtho.h
includes/display/: display.cpp  display.h
includes/mesh/: mesh.cpp  mesh.h
includes/model/: model.cpp  model.h
includes/obj_loader/: obj_loader.cpp
includes/shader/: shader.cpp  shader.h
includes/texture/: texture.cpp  texture.h
includes/transform/: transform.h
includes/vertex/: vertex.h
main/: main.cpp
resources/STLfiles/: yoda.stl
resources/STLfiles/AmbiguousCylinderGenerator/: ambi_4.stl  ambi_4_v1.4.stl  ambicylinder_3by2_v1.4.stl  temp.stl
resources/UnusedCode/: modelGetters.txt  sortingAlg.txt
resources/shaders/: colorShader.fs  colorShader.vs
